# Unitasks-Testing-And-Tools-Cpp

3 - Cmake/: CMakeLists.txt  main.cpp
4 - Create stack and write test/: CMakeLists.txt
4 - Create stack and write test/include/: stack.h
4 - Create stack and write test/test/: test-stack.cpp
4.2 - Write test for calculator/: CMakeLists.txt  README.md
4.2 - Write test for calculator/include/: MathExpression.h
4.2 - Write test for calculator/src/: main.cpp
4.2 - Write test for calculator/test/: CatchMain.cpp  mathexpression-test.cpp
5 - Documentation with Doxygen/: Doxyfile
5 - Documentation with Doxygen/include/: stack.h
5 - Documentation with Doxygen/test/: test-stack.cpp
Project C++ - Test and document GameofLife/: .gitignore  CMakeLists.txt  README.md  TEST_Population_Seed_2x2map.txt  TEST_Population_Seed_Gen2Neumann.txt  TEST_Population_Seed_Gen2_Conway.txt  bad_data.txt
Project C++ - Test and document GameofLife/Docs/: GameOfLifeDoxyfile
Project C++ - Test and document GameofLife/include/: GameOfLife.h  ScreenPrinter.h
Project C++ - Test and document GameofLife/include/Cell_Culture/: Cell.h  Population.h
Project C++ - Test and document GameofLife/include/GoL_Rules/: RuleFactory.h  RuleOfExistence.h  RuleOfExistence_Conway.h  RuleOfExistence_Erik.h  RuleOfExistence_VonNeumann.h
Project C++ - Test and document GameofLife/include/Support/: FileLoader.h  Globals.h  MainArguments.h  MainArgumentsParser.h  SupportStructures.h
Project C++ - Test and document GameofLife/src/: ScreenPrinter.cpp
Project C++ - Test and document GameofLife/terminal/: CMakeLists.txt  README.md  main.cpp
Project C++ - Test and document GameofLife/terminal/Debug/: Terminal.lib
Project C++ - Test and document GameofLife/tests/: CatchMain.cpp  TEST_FileLoader.cpp  TEST_RuleOfExistence_Conway.cpp  TEST_RuleOfExistence_Erik.cpp  TEST_RuleOfExistence_VonNeumann.cpp  TEST_Rulefactory.cpp  Test_Cell.cpp  Test_MainArguments.cpp  Test_MainArgumentsParser.cpp  Test_Population.cpp  Test_SupportStructures.cpp
